hphp/hack/test/typecheck/reified_generics/valid_targ_tpenv_bounds_test2.php.exp
File "valid_targ_tpenv_bounds_test2.php", line 7, characters 36-37:
Invalid reified hint (Typing[4305])
File "valid_targ_tpenv_bounds_test2.php", line 7, characters 36-37:
This is not reified, it cannot be used as a reified type argument
File "valid_targ_tpenv_bounds_test2.php", line 6, characters 18-19:
Tc is reified
